<resources>
    <string name="app_name">AnimeList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cache_title">Shingeki no Kyojin (Attack on Titan)</string>
    <string name="cache_deskripsi">Third detailModel of the Shingeki no Kyojin anime series</string>
    <string name="popularitas">Popularitas :</string>
    <string name="date">Tanggal Rilis: </string>
    <string name="durasi_per_episode">Durasi per episode :</string>
    <string name="sinopsis">Sinopsis :</string>
    <string name="sinopsis_def">Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called titans, forcing humans to hide in fear behind enormous concentric walls. What makes these giants truly terrifying is that their taste for human flesh is not born out of hunger but what appears to be out of pleasure. To ensure their survival, the remnants of humanity began living within defensive barriers, resulting in one hundred years without a single titan encounter. However, that fragile calm is soon shattered when a colossal titan manages to breach the supposedly impregnable outer wall, reigniting the fight for survival against the man-eating abominations. After witnessing a horrific personal loss at the hands of the invading creatures, Eren Yeager dedicates his life to their eradication by enlisting into the Survey Corps, an elite military unit that combats the merciless humanoids outside the protection of the walls. Based on Hajime Isayama\'s award-winning manga, Shingeki no Kyojin follows Eren, along with his adopted sister Mikasa Ackerman and his childhood friend Armin Arlert, as they join the brutal war against the titans and race to discover a way of defeating them before the last walls are breached.</string>
    <string name="rank">Rank : %s</string>
</resources>
